--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <div>
-    <a routerLink="/"><img class="logo" src="general/logo.webp" alt="logo"></a>
+    <a routerLink="/"><img class="logo" src="general/logo.png" alt="logo"></a>
   </div>
   <div class="movil">
     <div [ngTemplateOutlet]="menuTemplate"></div>
