--- a/src/app/detalles/detalles.component.html
+++ b/src/app/detalles/detalles.component.html
@@ -1,8 +1,8 @@
 <!-- Contenido principal -->
 <div class="container-fluid" *ngIf="serie">
-  <div class="contenido">
+  <div class="mb-3">
     <!-- <img class="izq" [src]="serie.imagen" [alt]="serie.nombre" (error)="serie.imagen='general/default-image.png'"> -->
-    <div class="der">
+    <div class="">
       <div class="nombre">
         <span>{{ serie.nombre }}</span>
       </div>
