--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,9 @@
 html, body {
   height: 100%;
   margin: 0;
-}
-
-body {
   background-color: #1B1B3A !important;
   font-family: 'Verdana', sans-serif;
+  color: #FFFFFF !important;
 }
 
 @font-face {
