--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!accesoPermitido; else contenidoPrivado" class="container-fluid text-center mt-5">
+<div *ngIf="!accesoPermitido else contenidoPrivado" class="container-fluid text-center mt-5 text-white">
     <h3 class="fw-bold mb-5">Inicia sesión como Administrador</h3>
 
     <form class="row justify-content-center col-12 col-md-3 mx-auto" (ngSubmit)="iniciarSesion()">
@@ -19,13 +19,16 @@
 </div>
 
 <ng-template #contenidoPrivado>
-    <div class="container-fluid text-center">
-        <h3 class="fw-bold mt-4 mb-4">Panel de Administrador</h3>
+    <div class="container-fluid text-center text-white">
+        <h3 class="fw-bold mt-5 mb-4">Panel de Administrador</h3>
         <p class="lead">¡Bienvenido al panel de administración!. Aquí puedes gestionar todas las series.</p>
 
         <div class="container">
             <div>
                 <button class="btn btn-success mb-3" (click)="agregarSerie()">Agregar Serie</button>
+            </div>
+            <div>
+                
             </div>
         </div>
     </div>
