--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -11,19 +11,19 @@
   </div>
   <div class="carousel-inner">
     <div *ngFor="let serie of series; let i = index" class="carousel-item" [class.active]="i === 0">
-      <img [src]="serie.portada" [alt]="serie.nombre" (error)="serie.portada='general/default-image-large.png'">
+      <img [src]="serie.banner" [alt]="serie.nombre" (error)="serie.banner='general/default-image-large.png'">
       <div class="carousel-info">
         <span class="title">{{ serie.nombre }}</span>
         <div class="temporadas">
           <span class="label">Temporadas:</span>
-          <div class="valor-container">
-            <ng-container *ngFor="let temp of serie.temporada; let i = index">
+          <div class="valor-container" *ngIf="serie.temporadas !== null">
+            <ng-container *ngFor="let temp of serie.temporadas; let i = index">
               <span *ngIf="i < 12" class="valor">{{ temp.temporada }}</span>
             </ng-container>
-            <span class="valor extra" *ngIf="serie.temporada.length > 12">...</span>
+            <span class="valor extra" *ngIf="serie.temporadas.length > 12">...</span>
           </div>
         </div>
-        <a class="descargar" [routerLink]="['/series', serie.id]">DESCARGA AQUI</a>
+        <a class="descargar" [routerLink]="['/series', serie.slug]">DESCARGA AQUI</a>
       </div>
     </div>
   </div>
