--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,13 @@
   </div>
   <app-footer></app-footer>
 </div>
+
+<div *ngIf="accesoPermitido" class="position-fixed bottom-0 end-0 m-4 text-end">
+  <div class="collapse mb-2" id="menuFlotante">
+    <a class="btn btn-sm btn-outline-secondary w-100" routerLink="/admin">Panel de Administrador</a>
+  </div>
+  <button class="btn btn-primary rounded-circle shadow" style="width: 3rem; height: 3rem;" type="button" data-bs-toggle="collapse"
+    data-bs-target="#menuFlotante" aria-expanded="false" aria-controls="menuFlotante">
+    <i class="fa-solid fa-house"></i>
+  </button>
+</div>
