--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 html, body {
   height: 100%;
   margin: 0;
+  padding: 0;
   background-color: #1B1B3A !important;
   font-family: 'Verdana', sans-serif;
 }
