--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,9 +14,9 @@
       <a routerLink="/">Luis✪F Series</a>
     </div>
 
-    <div class="user-icon" (click)="toggleDropdown()">
+    <!-- <div class="user-icon" (click)="toggleDropdown()">
       <img src="general/user-default.jpg" alt="menu">
-    </div>
+    </div> -->
     
 
     <div class="desktop w-100">
