--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,6 +14,8 @@
       <a routerLink="/">Luis✪F Series</a>
     </div>
 
+    <div class="p-3"></div>
+
     <!-- <div class="user-icon" (click)="toggleDropdown()">
       <img src="general/user-default.jpg" alt="menu">
     </div> -->
