--- a/src/app/menu-flotante/menu-flotante.component.html
+++ b/src/app/menu-flotante/menu-flotante.component.html
@@ -14,6 +14,10 @@
                 <i class="fa-solid fa-pen-to-square text-center me-1" style="width: 1.3rem;"></i>
                 Editar Serie
             </a>
+            <a class="btn btn-outline-danger border-0 text-start text-white" (click)="cerrarSesion()">
+                <i class="fa-solid fa-right-from-bracket text-center me-1" style="width: 1.3rem;"></i>
+                Cerrar Sesión
+            </a>
         </div>
     </div>
 
