--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,7 +1,6 @@
 <div *ngIf="!accesoPermitido else contenidoPrivado" class="container-fluid text-center mt-5 text-white">
     <h3 class="fw-bold mb-5">Inicia sesión como Administrador</h3>
-
-    <form class="row justify-content-center col-12 col-md-3 mx-auto" (ngSubmit)="iniciarSesion()">
+    <form class="justify-content-center mx-auto col-12 col-md-4 col-xl-3" (ngSubmit)="iniciarSesion()">
         <input class="form-control mb-3" type="email" [(ngModel)]="email" placeholder="Correo electrónico" name="email"
             required />
         <div class="input-group p-0">
@@ -12,8 +11,7 @@
                 <i class="fa" [ngClass]="mostrarPassword ? 'fa-eye' : 'fa-eye-slash'"></i>
             </button>
         </div>
-
-        <button type="submit" class="btn btn-primary px-4 mt-3">Ingresar</button>
+        <button type="submit" class="btn btn-primary w-100 px-4 mt-3">Ingresar</button>
         <p *ngIf="error" class="text-danger mt-3">{{ error }}</p>
     </form>
 </div>
@@ -22,6 +20,5 @@
     <div class="container-fluid text-center text-white">
         <h3 class="fw-bold mt-5 mb-4">Panel de Administrador</h3>
         <p class="lead">¡Bienvenido al panel de administración!. Aquí puedes gestionar todas las series.</p>
-
     </div>
 </ng-template>
