--- a/src/app/gestionar-series/gestionar-series.component.html
+++ b/src/app/gestionar-series/gestionar-series.component.html
@@ -1,13 +1,43 @@
-<div class="container">
-    <div class="d-flex justify-content-between align-items-center mb-3">
-        <input type="text" class="form-control mb-3" placeholder="Buscar serie..."
+<div class="container-fluid text-center">
+    <h2 class="text-white fw-bold mt-4">Gestionar Series</h2>
+    <div class="d-flex justify-content-center align-items-center gap-2 mt-4">
+        <input id="buscar" type="text" class="form-control" placeholder="Buscar serie..." [(ngModel)]="busqueda"
             (input)="filtrarSeries()" />
-        <button class="btn btn-success mb-3" (click)="agregarSerie()">Agregar Serie</button>
+        <select class="form-select w-auto" [(ngModel)]="filtroNombre" (change)="filtrarSeries()">
+            <option value="az" selected>A - Z</option>
+            <option value="za">Z - A</option>
+        </select>
+        <select class="form-select w-auto" [(ngModel)]="filtroFecha" (change)="filtrarSeries()">
+            <option value="todos" selected>Cualquier fecha</option>
+            <option value="recientes">Mas recientes</option>
+            <option value="antiguos">Mas antiguos</option>
+        </select>
+
+        <button class="btn btn-success w-auto" (click)="agregarSerie()">
+            <i class="fa-solid fa-circle-plus"></i>
+            Agregar Serie
+        </button>
     </div>
-    <div class="d-flex justify-content-center gap-2 my-3">
-        <div *ngFor="let serie of seriesFiltradas">
-            <img [src]="serie.portada" [alt]="serie.nombre" (error)="serie.portada='general/default-image.png'" />
-            <span class="d-block mt-2">{{ serie.nombre }}</span>
+    <div class="d-flex justify-content-center gap-2 my-4 flex-wrap">
+        <div *ngFor="let serie of seriesFiltradas" class="item-serie rounded shadow-sm text-center position-relative"
+            style="width: 160px; background-color: #21174C; border: solid 1px yellow;">
+
+            <!-- Imagen -->
+            <img [src]="serie.portada" [alt]="serie.nombre" (error)="serie.portada='general/default-image.png'"
+                class="img-fluid mx-auto rounded" style="width: 160px; height: 236px; object-fit: cover;" />
+
+            <!-- Nombre -->
+            <span class="d-inline-block fw-bold my-2" style="color: yellow;">{{ serie.nombre }}</span>
+
+            <!-- Menú oculto -->
+            <div class="overlay-menu d-flex flex-column justify-content-center align-items-center gap-2 px-3">
+                <a [routerLink]="['/editar-serie', serie.slug]" class="btn btn-sm btn-primary w-100">
+                    <i class="fa-solid fa-pen-to-square me-2"></i>Editar
+                </a>
+                <button class="btn btn-sm btn-danger w-100" (click)="eliminarSerie(serie.id)">
+                    <i class="fa-solid fa-trash-can me-2"></i>Eliminar
+                </button>
+            </div>
         </div>
     </div>
 </div>
