--- a/src/app/gestionar-series/gestionar-series.component.css
+++ b/src/app/gestionar-series/gestionar-series.component.css
@@ -1,3 +1,12 @@
+#gestionar-series {
+    opacity: 0;
+}
+
+#gestionar-series.active {
+    opacity: 1;
+    transition: opacity .2s ease-in-out;
+}
+
 #buscar {
     width: 300px;
 }
