--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,60 +1,58 @@
-<!-- Carousel -->
-<div id="carouselInicio" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
-  <div class="carousel-indicators">
-    <button *ngFor="let serie of series; let i = index"
-      type="button"
-      [attr.data-bs-target]="'#carouselInicio'"
-      [attr.data-bs-slide-to]="i"
-      [class.active]="i === 0"
-      [attr.aria-label]="'Slide ' + (i + 1)">
-    </button>
-  </div>
-  <div class="carousel-inner">
-    <div *ngFor="let serie of series; let i = index" class="carousel-item" [class.active]="i === 0">
-      <img [src]="serie.banner" [alt]="serie.nombre" (error)="serie.banner='general/default-image-large.png'">
-      <div class="carousel-info">
-        <span class="title">{{ serie.nombre }}</span>
-        <div class="temporadas" *ngIf="serie.temporadas !== null">
-          <span class="label">Temporadas:</span>
-          <div class="valor-container" *ngIf="serie.temporadas.length > 0">
-            <ng-container *ngFor="let temp of serie.temporadas; let i = index">
-              <span *ngIf="i < 12" class="valor">{{ temp.temporada }}</span>
-            </ng-container>
-            <span class="valor extra" *ngIf="serie.temporadas.length > 12">...</span>
+<div class="container-fluid" id="inicio">
+  <div id="carouselInicio" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
+    <div class="carousel-indicators">
+      <button *ngFor="let serie of series; let i = index" type="button" [attr.data-bs-target]="'#carouselInicio'"
+        [attr.data-bs-slide-to]="i" [class.active]="i === 0" [attr.aria-label]="'Slide ' + (i + 1)">
+      </button>
+    </div>
+    <div class="carousel-inner">
+      <div *ngFor="let serie of series; let i = index" class="carousel-item" [class.active]="i === 0">
+        <img [src]="serie.banner" [alt]="serie.nombre" (error)="serie.banner='general/default-image-large.png'">
+        <div class="carousel-info">
+          <span class="title">{{ serie.nombre }}</span>
+          <div class="temporadas" *ngIf="serie.temporadas !== null">
+            <span class="label">Temporadas:</span>
+            <div class="valor-container" *ngIf="serie.temporadas.length > 0">
+              <ng-container *ngFor="let temp of serie.temporadas; let i = index">
+                <span *ngIf="i < 12" class="valor">{{ temp.temporada }}</span>
+              </ng-container>
+              <span class="valor extra" *ngIf="serie.temporadas.length > 12">...</span>
+            </div>
           </div>
-        </div>
-        <div class="peliculas" *ngIf="serie.peliculas !== null">
-          <span class="label">Películas:</span>
-          <div class="valor-container" *ngIf="serie.peliculas.length > 0">
-            <ng-container *ngFor="let peli of serie.peliculas; let i = index">
-              <span *ngIf="i < 12" class="valor">{{ peli.pelicula }}</span>
-            </ng-container>
-            <span class="valor extra" *ngIf="serie.peliculas.length > 12">...</span>
+          <div class="peliculas" *ngIf="serie.peliculas !== null">
+            <span class="label">Películas:</span>
+            <div class="valor-container" *ngIf="serie.peliculas.length > 0">
+              <ng-container *ngFor="let peli of serie.peliculas; let i = index">
+                <span *ngIf="i < 12" class="valor">{{ peli.pelicula }}</span>
+              </ng-container>
+              <span class="valor extra" *ngIf="serie.peliculas.length > 12">...</span>
+            </div>
           </div>
+          <a class="descargar" [routerLink]="['/series', serie.slug]">DESCARGA AQUI</a>
         </div>
-        <a class="descargar" [routerLink]="['/series', serie.slug]">DESCARGA AQUI</a>
       </div>
     </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselInicio" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselInicio" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselInicio" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselInicio" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
 
-<!-- Canal -->
-<div class="canal">
-  <div class="top-content">
-    <span>Canal</span>
-    <img src="general/youtube.png" alt="Canal">
-    <span>Youtube</span>
+  <!-- Canal -->
+  <div class="canal">
+    <div class="top-content">
+      <span>Canal</span>
+      <img src="general/youtube.png" alt="Canal">
+      <span>Youtube</span>
+    </div>
+    <div class="bottom-content">
+      <img src="general/canal.jpg" alt="Youtube">
+      <a [href]="canalUrl" target="_blank">Luis✪F</a>
+    </div>
   </div>
-  <div class="bottom-content">
-    <img src="general/canal.jpg" alt="Youtube">
-    <a [href]="canalUrl" target="_blank">Luis✪F</a>
-  </div>
+
 </div>
