--- a/src/app/serie-formulario/serie-formulario.component.html
+++ b/src/app/serie-formulario/serie-formulario.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4 text-white">
+<div id="serie-formulario" class="container mt-4 text-white">
     <h2 class="text-center mb-4 fw-bold">
         {{ modoEdicion ? 'Editar Serie' : 'Nueva Serie' }}
     </h2>
