--- a/src/app/series/series.component.html
+++ b/src/app/series/series.component.html
@@ -1,5 +1,5 @@
 <!-- Contenido -->
-<div class="container-fluid">
+<div id="series" class="container-fluid">
   <div class="info-container">
     <div class="info-report">
       <img src="general/stop.png">
