--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!accesoPermitido else contenidoPrivado" class="container-fluid text-center mt-5 text-white">
+<div id="admin" *ngIf="!accesoPermitido else contenidoPrivado" class="container-fluid text-center mt-5 text-white">
     <h3 class="fw-bold mb-5">Inicia sesión como Administrador</h3>
     <form class="justify-content-center mx-auto col-12 col-md-4 col-xl-3" (ngSubmit)="iniciarSesion()">
         <input class="form-control mb-3" type="email" [(ngModel)]="email" placeholder="Correo electrónico" name="email"
