--- a/src/app/gestionar-series/gestionar-series.component.html
+++ b/src/app/gestionar-series/gestionar-series.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid text-center">
+<div id="gestionar-series" class="container-fluid text-center">
     <h2 class="text-white fw-bold mt-4">Gestionar Series</h2>
     <div class="d-flex justify-content-center align-items-center gap-2 mt-4">
         <input id="buscar" type="text" class="form-control" placeholder="Buscar serie..." [(ngModel)]="busqueda"
@@ -13,25 +13,36 @@
             <option value="antiguos">Mas antiguos</option>
         </select>
 
-        <button class="btn btn-success w-auto" (click)="agregarSerie()">
+        <a class="btn btn-success w-auto" [routerLink]="['/agregar-serie']">
             <i class="fa-solid fa-circle-plus"></i>
             Agregar Serie
-        </button>
+        </a>
     </div>
     <div class="d-flex justify-content-center gap-2 my-4 flex-wrap">
         <div *ngFor="let serie of seriesFiltradas" class="item-serie rounded shadow-sm text-center position-relative"
             style="width: 160px; background-color: #21174C; border: solid 1px yellow;">
 
+            <div class="text-white fw-bold" style="height: 1.3rem; font-size: .76rem;"
+                [style.background-color]="serie.activo ? 'rgb(12, 157, 12)' : '#df3314'">
+                <i class="fa-solid me-1 m-auto" [ngClass]="serie.activo ? 'fa-check' : 'fa-xmark'"></i>
+                {{ serie.activo ? 'Activado' : 'Desactivado' }}
+            </div>
+
             <!-- Imagen -->
             <img [src]="serie.portada" [alt]="serie.nombre" (error)="serie.portada='general/default-image.png'"
-                class="img-fluid mx-auto rounded" style="width: 160px; height: 236px; object-fit: cover;" />
+                class="img-fluid mx-auto" style="width: 160px; height: 236px; object-fit: cover;" />
 
             <!-- Nombre -->
-            <span class="d-inline-block fw-bold my-2" style="color: yellow;">{{ serie.nombre }}</span>
+            <span class="d-block fw-bold my-2" style="color: yellow;">{{ serie.nombre }}</span>
+
+            <span class="d-block text-light my-2" style="font-size: .84rem;">
+                {{ serie.creado | date: 'd/M/yyyy' }}
+            </span>
 
             <!-- Menú oculto -->
-            <div class="overlay-menu d-flex flex-column justify-content-center align-items-center gap-2 px-3">
-                <a [routerLink]="['/editar-serie', serie.slug]" class="btn btn-sm btn-primary w-100">
+            <div class="overlay-menu d-flex flex-column justify-content-center align-items-center gap-2 px-3"
+                style="margin-top: 1.3rem;">
+                <a [routerLink]="['/editar-serie', serie.id]" class="btn btn-sm btn-primary w-100">
                     <i class="fa-solid fa-pen-to-square me-2"></i>Editar
                 </a>
                 <button class="btn btn-sm btn-danger w-100" (click)="eliminarSerie(serie.id)">
