--- a/src/app/series/series.component.css
+++ b/src/app/series/series.component.css
@@ -1,3 +1,11 @@
+#series {
+    opacity: 0;
+}
+
+#series.active {
+    opacity: 1;
+    transition: opacity .2s ease-in-out;
+}
 
 .info-container {
   width: 90%;
